<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/relative_layout_background"
    android:paddingBottom="10dp">


    <TextView
        android:id="@+id/review_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:textStyle="bold"
        android:textSize="12sp"
        tools:text="Review title" />


    <TextView
        android:id="@+id/reviewer_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_title"
        android:paddingLeft="5dp"
        android:text="@string/reviewer_name"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reviewer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_title"
        android:layout_toRightOf="@id/reviewer_name_title"
        android:layout_marginLeft="3dp"
        android:textSize="12sp"
        tools:text="Test" />


    <TextView
        android:id="@+id/review_rating_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_title"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@id/reviewer_name"
        android:paddingRight="5dp"
        android:text="@string/rating_title"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/review_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_title"
        android:layout_toRightOf="@id/review_rating_title"
        android:textSize="12sp"
        tools:text="4.5" />


    <TextView
        android:id="@+id/review_system_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reviewer_name_title"
        android:paddingLeft="5dp"
        android:text="@string/review_system_title"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/review_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reviewer_name_title"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@id/review_system_title"
        android:textSize="12sp"
        tools:text="IRECOMMEND" />


    <TextView
        android:id="@+id/review_post_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reviewer_name_title"
        android:layout_toRightOf="@id/review_system"
        android:paddingLeft="5dp"
        android:text="@string/review_post_time"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/review_post_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reviewer_name_title"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@id/review_post_time_title"
        android:textSize="12sp"
        tools:text="2019-10-15 17:38:32" />


    <TextView
        android:id="@+id/review_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_post_time_title"
        android:layout_marginStart="0dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:textSize="12sp"
        tools:text="Product Description sssssssssssss sda da asdad asd asda dada asdd asd adadas asd asd asd adasda asasd dad asd asda dada asdd asd adadas asd asd asd adasda asasd" />


    <TextView
        android:id="@+id/review_pluses_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_body"
        android:paddingLeft="5dp"
        android:text="@string/review_pluses_title"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/review_pluses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_body"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@id/review_pluses_title"
        android:textSize="12sp"
        tools:text="Хороший, Крутой, Качественный" />

    <TextView
        android:id="@+id/review_minuses_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_pluses"
        android:paddingLeft="5dp"
        android:text="@string/review_minuses_title"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/review_minuses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_pluses"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@id/review_minuses_title"
        android:textSize="12sp"
        tools:text="Плохой, Стрёмный, Некачественный asd ad ad as ada  ada a ada dad sadad ada dasd asdasdasdadda as sada " />


    <TextView
        android:id="@+id/review_link_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_minuses"
        android:paddingLeft="5dp"
        android:text="@string/review_link_title"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/review_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_minuses"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@id/review_link_title"
        android:textSize="12sp"
        android:autoLink="web"
        tools:text="http://test.com" />


</RelativeLayout>